--- a/style.css
+++ b/style.css
@@ -90,17 +90,11 @@
 
 @media (max-width: 576px) {
  
-  
-  
   h1 {
     font-size: 48px;
+    line-height: 1.5;
   }
   
-  h3 {
-    font-size: 28px;
-  }
-  
- 
   h2{
     font-size: 32px;
     text-align: center;
