--- a/style.css
+++ b/style.css
@@ -90,6 +90,12 @@
 
 @media (max-width: 576px) {
  
+    .col-sm-6 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      
   h1 {
     font-size: 48px;
     line-height: 1.5;
