--- a/style.css
+++ b/style.css
@@ -1,126 +1,99 @@
-:root {
-    --primary-color: #6c63ff;
-    --secondary-color: #f5f2fe;
-    --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-  }
-  
-  body {
-    margin-top: 100px;
-  }
-  
-  h1,
-  h2,
-  h3 {
+body {
+    font-family: Arial, sans-serif;
     margin: 0;
-  }
-  
-  h1 {
-    font-size: 96px;
-  }
-  
-  h2 {
-    font-size: 48px;
-  }
-  
-  h3 {
-    font-size: 24px;
-    opacity: 0.7;
-  }
-  
-  p {
-    font-size: 18px;
-    line-height: 1.5;
-  }
-  
-  .navigation-links {
-    display: flex;
-    margin-top: 40px;
-    justify-content: center;
-  }
-  
-  .navigation-links a {
-    margin: 20px;
-  }
-  
-  .primary-link {
-    border-radius: 4px;
-    padding: 20px 15px;
-    text-decoration: none;
-    text-transform: capitalize;
-    background: var(--primary-color);
-    box-shadow: var(--box-shadow);
+    padding: 0;
+    background-image: url(pexels-anete-lusina-5240548.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     color: white;
-  }
-  
-  .secondary-link {
-    border-radius: 4px;
-    padding: 20px 15px;
-    text-decoration: none;
-    text-transform: capitalize;
-    color: var(--primary-color);
-    border: 1px solid var(--primary-color);
-  }
-  
-  .homepage-link {
-    color: var(--primary-color);
-    text-align: center;
-    display: block;
-  }
-  
-  .about-paragraphs {
-    margin: 30px 0;
-  }
-  
-  .about-paragraphs p {
-    margin: 10px;
-  }
-  
-  .email-link {
-    display: flex;
-    justify-content: center;
-    color: var(--primary-color);
-    font-size: 28px;
-    text-decoration: none;
-  }
-  
-  .email-link:hover {
-    text-decoration: underline;
-  }
-
-
-@media (max-width: 576px) {
- 
-    .col-sm-6 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      
-  h1 {
-    font-size: 48px;
-    line-height: 1.5;
-  }
-  
-  h2{
-    font-size: 32px;
-    text-align: center;
-  }
-
-  p{
-    text-align: center;
-  }
-
-  .project-link{
-    display: block;
-    text-align: center;
-    margin: 0 20px;
-  }
 }
 
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
 
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+}
 
+header h1 {
+    margin: 0;
+    font-size: 28px;
+}
 
+header nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
 
+header nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
 
+header nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
 
+section {
+    padding: 50px 0;
+}
+
+section h2 {
+    font-size: 24px;
+}
+h4{
+    text-align: center;
+    margin-top: 10px;
+    margin-left: 70px;
+}
+.portfolio-item {
+    margin-bottom: 30px;
+}
+.about h2{
+    font-size: 29px;
+    
+}
+.img-fluid {
+    max-width: 400px;
+    text-align: center;
+    margin-left: 80px;
+    border-radius: 4px;
+}
+
+.btn-branding {
+    background:  #6c63ff;
+    color: white;
+    border-radius: 4px;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-left: 200px;
+
+  }
+  .icons{
+    max-width: 40px;
+    justify-content: space-between;
+  }
   
+  .talent{
+    font-size: 48px;
+    color: #712be2;
+ margin-left: 200px;
+   text-shadow: #6c63ff;
+   text-decoration: underline;
+   
+  }
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+}
